Update README with manual deployment steps and fix JSONB/Dashboard issues

--- a/client/index.html
+++ b/client/index.html
@@ -1,24 +1,29 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AD SecureCheck - Active Directory Security Assessment</title>
-    <meta name="description" content="Plataforma profesional de evaluación de seguridad para Active Directory basada en mejores prácticas de Microsoft" />
-    <meta name="author" content="AD SecureCheck" />
 
-    <meta property="og:title" content="AD SecureCheck - Active Directory Security Assessment" />
-    <meta property="og:description" content="Plataforma profesional de evaluación de seguridad para Active Directory basada en mejores prácticas de Microsoft" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AD SecureCheck - Active Directory Security Assessment</title>
+  <meta name="description"
+    content="Plataforma profesional de evaluación de seguridad para Active Directory basada en mejores prácticas de Microsoft" />
+  <meta name="author" content="AD SecureCheck" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="AD SecureCheck - Active Directory Security Assessment" />
+  <meta property="og:description"
+    content="Plataforma profesional de evaluación de seguridad para Active Directory basada en mejores prácticas de Microsoft" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@lovable_dev" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <script src="/env-config.js"></script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
