--- a/client/index.html
+++ b/client/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AD SecureCheck - Active Directory Security Assessment</title>
+  <title>OpsIdentity - Operational Health & Drift Control</title>
   <meta name="description"
-    content="Plataforma profesional de evaluación de seguridad para Active Directory basada en mejores prácticas de Microsoft" />
-  <meta name="author" content="AD SecureCheck" />
+    content="Plataforma de higiene operativa y control de arquitectura para Active Directory." />
+  <meta name="author" content="OpsIdentity" />
 
-  <meta property="og:title" content="AD SecureCheck - Active Directory Security Assessment" />
+  <meta property="og:title" content="OpsIdentity - Operational Health & Drift Control" />
   <meta property="og:description"
-    content="Plataforma profesional de evaluación de seguridad para Active Directory basada en mejores prácticas de Microsoft" />
+    content="Plataforma de higiene operativa y control de arquitectura para Active Directory." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
